--- a/mysite/templates/home.html
+++ b/mysite/templates/home.html
@@ -9,6 +9,6 @@
   <p class="card-text">
     
 CFC - Departamento de Informática, Brasília (DF)<br>
-    <a href="https://www.cfc.org.br">@cfc</a>
+    <a href="#">@cfc</a>
   </p>
 {% endblock %}
